Добивал перечень нужных типов устройств, сокртить самый большой справочник до перечисленных девайсов

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
     <title>{{title}}</title>
 </head>
 <body>
-
+Перечень справочников:
 <h3>Cправочник видов РЭС из Единого технического справочника РЭС и ВЧУ</h3>
     <select>
      {% for ets in etskindlist %}
