registration form modification

--- a/app/templates/registration.html
+++ b/app/templates/registration.html
@@ -9,7 +9,7 @@
 Куда (ТУ РКН):<br/>
     <select>
      {% for rsnparts in dicrsnparts %}
-        <option value="{{rsnparts.PartId}}" width="800px">{{ rsnparts.PartName }}</option>
+        <option value="{{rsnparts.PartId}}" >{{ rsnparts.PartName }}</option>
      {% endfor %}
      </select><br/>
 
